clients/tui/src/bottom_pane/snapshots/atlas__bottom_pane__chat_composer__tests__composer_draft.snap
---
source: src/bottom_pane/chat_composer.rs
expression: "rows(&draft, 100, 14)"
---
                                                                                                    
› short                                                                                             
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
? shortcuts                                          gpt-5.6-luna · opencode-go · 0/256k · 100% left
