clients/tui/src/bottom_pane/snapshots/atlas__bottom_pane__chat_composer__tests__composer_empty.snap
---
source: src/bottom_pane/chat_composer.rs
assertion_line: 290
expression: "rows(&empty, 100, 14)"
---
                                                                                                    
› Ask Atlas to do anything                                                                          
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ? for shortcuts                                                                 0/256k (100% left)
