clients/tui/src/bottom_pane/snapshots/atlas__bottom_pane__chat_composer__tests__composer_history_search_pasted_query.snap
---
source: src/bottom_pane/chat_composer.rs
expression: "rows(&app, 100, 14)"
---
                                                                                                    
› git status                                                                                        
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  reverse-i-search: git
