clients/tui/src/bottom_pane/snapshots/atlas__bottom_pane__chat_composer__tests__composer_narrow.snap
---
source: src/bottom_pane/chat_composer.rs
expression: output
---
                                                  
                                                  
› Ask Atlas to do anything                        
                                                  
                                                  
? shortcuts    gpt-5.6-luna · 2.6k/256k · 98% left
