clients/tui/src/bottom_pane/snapshots/atlas__bottom_pane__chat_composer__tests__composer_padding.snap
---
source: src/bottom_pane/chat_composer.rs
expression: "rows(&app, 100, height)"
---
                                                                                                    
                                                                                                    
  › Ask Atlas to do anything                                                                        
                                                                                                    
                                                                                                    
  ~/projetos/Atlas · ? shortcuts                               gpt-5.6-luna · 2.6k/256k · 98% left
