clients/tui/src/bottom_pane/snapshots/atlas__bottom_pane__chat_composer__tests__composer_shortcuts.snap
---
source: src/bottom_pane/chat_composer.rs
expression: "rows(&shortcuts, 100, super::desired_height(&shortcuts, 100))"
---
                                                                                                    
› Ask Atlas to do anything                                                                          
/ for commands                                                                                      
shift + enter for newline                         tab to submit message                             
@ for file paths                                                                                    
ctrl + g to edit in external editor               esc again to edit previous message                
ctrl + r search history                           ctrl + c to exit                                  
ctrl + t to view transcript
